# crewai-instagram-example

./: .env.example  README.md  final-content-strategy.md  market_research.md  pyproject.toml  visual-content.md
src/instagram/: crew.py  main.py
src/instagram/config/: agents.yaml  tasks.yaml
src/instagram/tools/: search.py
